# slowtec-web

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  clippy-all.sh
src/: lib.rs  ws.rs  wspush.rs
