[package]
name = "slowtec-web"
version = "0.0.1"
authors = [ "slowtec GmbH" ]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false

[dependencies]
slowtec-core = { version = "*", git = "https://github.com/uklotzde/slowtec-core.git", branch = "master" }
failure = "*"
futures = "0.1"
warp = "*"
